--- a/src/scss/test/page-body.scss
+++ b/src/scss/test/page-body.scss
@@ -11,6 +11,9 @@
     padding: 0;
 }
 
+body {
+    overflow-x: hidden;
+}
 .container {
     position: relative;
     // width: 100%;
@@ -78,67 +81,17 @@
         height: 56.25vw;
         background: linear-gradient(0deg, #181818, transparent 50%);
     }
-
-    // body part
-    // .body {
-    //     position: relative;
-    //     top: 45vw;
-    //     width: 100%;
-    //     height: 2000px;
-    //     background-color: rgba(255, 0, 0, .1);
-
-    
-    //     .hidden-info-card {
-    //         border-radius: .5vw;
-    //         opacity: 0;
-    //         position: absolute;
-    //         z-index: 5;
-    //         left: 0;
-    //         top: 0;
-    //         width: 200px;
-    //         background-color: #181818;
-    //         transform: scale(1);
-    //         transition: opacity .3s ease, transform 0.3s ease, top .3s ease, left .3s ease; /* Add transition */
-    //         img {
-    //             opacity: 1;
-    //             width: 100%;
-    //             border-radius: .5vw;
-    //         }
-    //         .card-info {
-    //             color: white;
-    //             display: none;
-    //         }
-    //     }
-    //     .card {
-    //         width: 200px;
-    //         height: 112px;
-    //         img {
-    //             width: 100%;
-    //             border-radius: .3vw;
-
-    //         }
-    //     }
-    //     .card:hover + .hidden-info-card, .hidden-info-card:hover {
-    //         opacity: 1;
-    //         transform: scale(1.2);
-    //         transition-delay: .5s;
-    //         left: px;
-    //         top: -20px;
-
-    //         .card-info {
-    //             display: block;
-    //         }
-    //     }
-    // }
     
 }
 
 // body part 
 .body-wrapper {
     width: 100%;
-    height: 2000px;
-    position: absolute;
+
+    position: relative;
     top: 50vw;
+    background-color: cyan;
+    
 }
 
 .carousel-container {
@@ -147,21 +100,24 @@
     width: 100%;
     background-color: rgba(255, 0, 0, 0.1);
     cursor: pointer;
+    position: relative;
 }
 
+
 .carousel-container  {
-    .slider{
+    .slider {
         --slider-index: 0;
         width: calc(100% - 2 * var(--slider-padding));
         display: flex;
         transform: translateX(calc(var(--slider-index) * -100%));
-        transition: transform .3s ease-in ;
+        transition: transform .7s ease-in-out ;
+        
         .img-container {
             aspect-ratio: 16/9;
             flex: 0 0 25%; //   shrink 0 grow 0 25% of parent
             max-width: 25%; // make sure it is alway25%
             padding: .1rem;
-            position: relative;
+             position: relative;
 
             img {
                 width: 100%;
@@ -189,27 +145,39 @@
                 }
                 .card-info {
                     font-size: 1vw;
+                    z-index: 100;
                 }
             }
             .hidden-info-card:hover {
                 opacity: 1;
                 top: -7vw;
-                left: 4.5vw;
+                left: 5.5vw;
                 scale: 1.5;
                 transition-delay: .5s;
                 pointer-events: all;
-                z-index: 15;
+                z-index: 20;
+                
+            }
+            .hidden-info-card:hover + .slider{
+                z-index: 10;
             }
             
+            
+            
         }
-        .img-container:hover .hidden-info-card {
-            pointer-events: all;
-            z-index: 15;
+        .img-container:hover {
+            .hidden-info-card {
+                pointer-events: all;
+                // z-index: 20;
+            }
         }
         
     }
     
 }
+
+
+
 
 // handler
 
@@ -257,3 +225,11 @@
     border-radius: var(--card-border) 0 0 var(--card-border);
 }
 
+.hidden-info:hover + .slider {
+    z-index: 10;
+  }
+  
+
+.slider:hover {
+    z-index: 4;
+}
